--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -6,6 +6,7 @@ name_normalized=$name;format="normalize"$
 scala_version=2.12.7
 http4s_version=maven(org.http4s, http4s-dsl_2.12, stable)
 cats_version=maven(org.typelevel, cats-core_2.12, stable)
+cats_effect_version=maven(org.typelevel, cats-effect_2.12, stable)
 cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.12, stable)
 monix_version=3.0.0-RC2
 circe_version=maven(io.circe, circe-core_2.12, stable)
