added scalaz-deriving library refactored PersistenceModuleLoader removed redundant code

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -11,6 +11,7 @@ cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.12, stable)
 monix_version=3.0.0-RC2
 circe_version=maven(io.circe, circe-core_2.12, stable)
 circe_config_version=maven(io.circe, circe-config_2.12, stable)
+scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
 refined_version=maven(eu.timepit, refined_2.12, stable)
 mongo_scala_driver_version=maven(org.mongodb.scala, mongo-scala-driver_2.12, stable)
 sourcecode_version=maven(com.lihaoyi, sourcecode_2.12, stable)
@@ -27,5 +28,6 @@ sbt_release_version=1.0.6
 sbt_scoverage_version=1.5.1
 sbt_scalafmt_version=1.5.1
 sbt_wartremover_version=2.3.7
+sbt_tpolecat_version=0.1.5
 
 useMongo = true
