removed dynamic generation of mongo-related code

--- a/src/main/g8/src/main/resources/application.conf
+++ b/src/main/g8/src/main/resources/application.conf
@@ -12,7 +12,6 @@ application {
 
   persistence {
 
-    $if(useMongo.truthy)$
     mongodb {
       uri = "mongodb://localhost:27017/?streamType=netty"
       uri = \${?MONGODB_URI}
@@ -35,7 +34,36 @@ application {
       }
 
     }
-    $endif$
+
+    postgres {
+
+      driver = "org.postgresql.Driver"
+      driver = \${?POSTGRESQL_DRIVER}
+
+      uri = "jdbc:postgresql://localhost:5432/postgres"
+      uri = \${?POSTGRESQL_URI}
+
+      user = "root"
+      user = \${?POSTGRESQL_USER}
+
+      password = "root"
+      password = \${?POSTGRESQL_PASSWORD}
+
+      connection-attempt-timeout = 500 milliseconds
+      connection-attempt-timeout = \${?POSTGRESQL_CONNECTION_ATTEMPT_TIMEOUT}
+
+      retry-policy {
+        retries = 10
+        retries = \${?POSTGRESQL_RETRY_POLICY_RETRIES}
+
+        delay = 5 seconds
+        delay = \${?POSTGRESQL_RETRY_POLICY_DELAY}
+
+        timeout = 60 seconds
+        timeout = \${?POSTGRESQL_RETRY_POLICY_TIMEOUT}
+      }
+
+    }
 
   }
 
