--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -16,6 +16,7 @@ refined_version=maven(eu.timepit, refined_2.12, stable)
 mongo_scala_driver_version=maven(org.mongodb.scala, mongo-scala-driver_2.12, stable)
 sourcecode_version=maven(com.lihaoyi, sourcecode_2.12, stable)
 magnorlia_version=maven(com.propensive, magnolia_2.12, stable)
+doobie_version=maven(org.tpolecat, doobie-core_2.12, stable)
 netty_version=4.1.30.Final
 logback_version=maven(ch.qos.logback, logback-classic, stable)
 scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stable)
@@ -29,5 +30,3 @@ sbt_scoverage_version=1.5.1
 sbt_scalafmt_version=1.5.1
 sbt_wartremover_version=2.3.7
 sbt_tpolecat_version=0.1.5
-
-useMongo = true
