--- a/src/main/g8/docker/docker-compose.yml
+++ b/src/main/g8/docker/docker-compose.yml
@@ -8,18 +8,14 @@ services:
       APPLICATION_HTTP_HOST: "0.0.0.0"
       APPLICATION_HTTP_PORT: 9000
       LOG_LEVEL: "INFO"
-      $if(useMongo.truthy)$MONGODB_URI: "mongodb://mongodb:27017/"$endif$
+      MONGODB_URI: "mongodb://mongodb:27017/"
     ports:
       - 9000:9000
-    $if(useMongo.truthy)$
     links:
       - mongodb
     depends_on:
       - mongodb
-    $endif$
 
-
-  $if(useMongo.truthy)$
   mongodb:
     restart: always
     image: mongo:latest
@@ -29,4 +25,3 @@ services:
       - MONGO_DATA_DIR=/data/db
     volumes:
       - ./mongo/data:/data/db
-  $endif$
