--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -3,4 +3,4 @@ maxColumn = 130
 newlines.sometimesBeforeColonInMethodReturnType = false
 newlines.afterCurlyLambda = never
 align.openParenCallSite = false
-rewrite.rules = [SortImports]
+rewrite.rules = [SortImports, AvoidInfix, RedundantParens, RedundantBraces]
