--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -1,6 +1,37 @@
+version = 2.0.0-RC8
 style = defaultWithAlign
 maxColumn = 130
 newlines.sometimesBeforeColonInMethodReturnType = false
 newlines.afterCurlyLambda = never
 align.openParenCallSite = false
 rewrite.rules = [SortImports, AvoidInfix, RedundantParens, RedundantBraces]
+rewrite.neverInfix.excludeFilters = [
+  cross
+  until
+  to
+  by
+  eq
+  ne
+  "should.*"
+  "contain.*"
+  "must.*"
+  in
+  ignore
+  be
+  taggedAs
+  thrownBy
+  synchronized
+  have
+  when
+  size
+  like
+  only
+  noneOf
+  oneElementOf
+  noElementsOf
+  atLeastOneElementOf
+  atMostOneElementOf
+  allElementsOf
+  inOrderElementsOf
+  theSameElementsAs
+]
