--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -11,6 +11,7 @@ cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.12, stable)
 monix_version=3.0.0-RC2
 circe_version=maven(io.circe, circe-core_2.12, stable)
 circe_config_version=maven(io.circe, circe-config_2.12, stable)
+newtype_version=maven(io.estatico,newtype_2.12, stable)
 scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
 refined_version=maven(eu.timepit, refined_2.12, stable)
 mongo_scala_driver_version=maven(org.mongodb.scala, mongo-scala-driver_2.12, stable)
@@ -25,8 +26,8 @@ cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
 
 sbt_version=1.2.8
 sbt_native_packager_version=1.3.6
-sbt_release_version=1.0.6
+sbt_release_version=1.0.11
 sbt_scoverage_version=1.5.1
 sbt_scalafmt_version=1.5.1
 sbt_wartremover_version=2.3.7
-sbt_tpolecat_version=0.1.5
+sbt_tpolecat_version=0.1.7
