Refactored JsonOps, Runner Moved api module to utils packages

--- a/src/main/g8/src/main/resources/deriving.conf
+++ b/src/main/g8/src/main/resources/deriving.conf
@@ -1,3 +1,5 @@
+cats.kernel.Eq = cats.kernel.Eq.fromUniversalEquals
 $organization$.util.logging.Loggable = $organization$.util.logging.LoggableDerivation.derive
+$organization$.util.error.EmptyThrowableExtractor = $organization$.util.error.EmptyThrowableExtractor.create
 io.circe.Encoder = io.circe.generic.semiauto.deriveEncoder
 io.circe.Decoder = io.circe.generic.semiauto.deriveDecoder
