replaced manual docker env with docker-compose env

--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -6,7 +6,6 @@ newlines.afterCurlyLambda = never
 align.openParenCallSite = false
 rewrite.rules = [SortImports, AvoidInfix, RedundantParens, RedundantBraces]
 rewrite.neverInfix.excludeFilters = [
-  cross
   until
   to
   by
@@ -34,4 +33,10 @@ rewrite.neverInfix.excludeFilters = [
   allElementsOf
   inOrderElementsOf
   theSameElementsAs
+]
+align.tokens.add = [
+  { code = ":=", owner = "Infix" },
+  { code = "+=", owner = "Infix" },
+  { code = "++=", owner = "Infix" }
+  { code = "-=", owner = "Infix" }
 ]
