Updated scalafmt rules Added `execution` package

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,15 @@ cache:
   directories:
     - $HOME/.ivy2/cache
     - $HOME/.sbt/boot/
+    - $HOME/.sbt/launchers
+    - $HOME/.cache
 
 jdk:
   - oraclejdk8
 
 script:
   ## This runs the template with the default parameters, and runs test within the templated app.
-  - sbt g8Test
+  - sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M test
 
   ## Tricks to avoid unnecessary cache updates
   - find $HOME/.sbt -name "*.lock" | xargs rm
