--- a/src/main/g8/src/main/resources/application.conf
+++ b/src/main/g8/src/main/resources/application.conf
@@ -6,7 +6,19 @@ application {
     host = \${?APPLICATION_HTTP_HOST}
 
     port = 9001
+    port = \${?PORT}
     port = \${?APPLICATION_HTTP_PORT}
+
+    auth {
+      realm = "$name_normalized$"
+      realm = \${?API_BASIC_AUTH_REALM}
+
+      user = "admin"
+      user = \${?API_BASIC_AUTH_USER}
+
+      password = "admin"
+      password = \${?API_BASIC_AUTH_PASSWORD}
+    }
 
   }
 
