--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,42 @@
+version = 2.0.1
 style = defaultWithAlign
 maxColumn = 130
 newlines.sometimesBeforeColonInMethodReturnType = false
 newlines.afterCurlyLambda = never
 align.openParenCallSite = false
-rewrite.rules = [SortImports]
+rewrite.rules = [SortImports, AvoidInfix, RedundantParens, RedundantBraces]
+rewrite.neverInfix.excludeFilters = [
+  until
+  to
+  by
+  eq
+  ne
+  "should.*"
+  "contain.*"
+  "must.*"
+  in
+  ignore
+  be
+  taggedAs
+  thrownBy
+  synchronized
+  have
+  when
+  size
+  like
+  only
+  noneOf
+  oneElementOf
+  noElementsOf
+  atLeastOneElementOf
+  atMostOneElementOf
+  allElementsOf
+  inOrderElementsOf
+  theSameElementsAs
+]
+align.tokens.add = [
+  { code = ":=", owner = "Infix" },
+  { code = "+=", owner = "Infix" },
+  { code = "++=", owner = "Infix" }
+  { code = "-=", owner = "Infix" }
+]
