--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,12 +3,12 @@ description=A service template with a set of plugins
 organization=com.example
 name_normalized=$name;format="normalize"$
 
-scala_version=2.12.8
+scala_version=2.12.10
 http4s_version=maven(org.http4s, http4s-dsl_2.12, stable)
 cats_version=maven(org.typelevel, cats-core_2.12, stable)
 cats_effect_version=maven(org.typelevel, cats-effect_2.12, stable)
 cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.12, stable)
-monix_version=3.0.0-RC2
+monix_version=maven(io.monix, monix_2.12, stable)
 circe_version=maven(io.circe, circe-core_2.12, stable)
 circe_config_version=maven(io.circe, circe-config_2.12, stable)
 newtype_version=maven(io.estatico,newtype_2.12, stable)
@@ -24,10 +24,10 @@ scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stab
 scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
 cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
 
-sbt_version=1.2.8
-sbt_native_packager_version=1.3.6
+sbt_version=1.3.0
+sbt_native_packager_version=1.4.1
 sbt_release_version=1.0.11
-sbt_scoverage_version=1.5.1
-sbt_scalafmt_version=1.5.1
-sbt_wartremover_version=2.3.7
-sbt_tpolecat_version=0.1.7
+sbt_scoverage_version=1.6.0
+sbt_scalafmt_version=2.0.2
+sbt_wartremover_version=2.4.2
+sbt_tpolecat_version=0.1.8
