--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -10,6 +10,7 @@ cats_effect_version=maven(org.typelevel, cats-effect_2.12, stable)
 cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.12, stable)
 monix_version=maven(io.monix, monix_2.12, stable)
 circe_version=maven(io.circe, circe-core_2.12, stable)
+circe_extras_version=maven(io.circe, circe-generic-extras_2.12, stable)
 circe_config_version=maven(io.circe, circe-config_2.12, stable)
 newtype_version=maven(io.estatico,newtype_2.12, stable)
 scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
