--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -24,8 +24,9 @@ logback_version=maven(ch.qos.logback, logback-classic, stable)
 scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stable)
 scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
 cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
+scalacheck_version=maven(org.scalacheck, scalacheck_2.12, stable)
 
-sbt_version=1.3.0
+sbt_version=1.3.1
 sbt_native_packager_version=1.4.1
 sbt_release_version=1.0.11
 sbt_scoverage_version=1.6.0
