--- a/src/main/g8/.gitlab-ci.yml
+++ b/src/main/g8/.gitlab-ci.yml
@@ -1,9 +1,11 @@
-image: docker:17.10.0-ce
+image: docker:19.03.0
+
 services:
-  - docker:dind
+  - docker:19.03.0-dind
 
 variables:
-  DOCKER_HOST: tcp://localhost:2375
+  DOCKER_DRIVER: overlay2
+  DOCKER_TLS_CERTDIR: ""
 
 stages:
   - build-ci-container
@@ -13,11 +15,17 @@ stages:
 
 build-ci-container:
   stage: build-ci-container
-  script: "/bin/bash ci/build-ci-container.sh \${CI_REGISTRY_IMAGE}"
+  script: '/bin/bash ci/build-ci-container.sh "\${CI_REGISTRY_IMAGE}/ci-container:latest"'
+  only:
+    - master
+    - release
 
 coverage:
   stage: execute-tests
-  script: "/bin/bash ci/execute-tests.sh \${CI_REGISTRY_IMAGE}"
+  except:
+    - release
+    - tags
+  script: '/bin/bash ci/execute-tests.sh "\${CI_REGISTRY_IMAGE}/ci-container:latest"'
   artifacts:
     paths:
       - target/scala-2.12/scoverage-report/
@@ -26,7 +34,7 @@ pages:
   stage: publish-coverage
   script:
     - mv target/scala-2.12/scoverage-report/ public/
-    - echo "Coverage reports is available at \$CI_PAGES_DOMAIN"
+    - echo "Coverage reports is available at \${CI_PAGES_DOMAIN}"
   artifacts:
     paths:
       - public
@@ -36,11 +44,14 @@ pages:
 
 release:
   stage: release
-  script: "/bin/bash ci/release.sh \${CI_REGISTRY_IMAGE}"
+  when: manual
+  script:
+    - apk add git
+    - '/bin/bash ci/release.sh "\${CI_REGISTRY_IMAGE}/ci-container:latest"'
   only:
     - release
 
 before_script:
   - apk update
   - apk add bash
-  - docker login -u \$CI_REGISTRY_USER -p \$CI_REGISTRY_PASSWORD \$CI_REGISTRY
+  - echo -n \$CI_JOB_TOKEN | docker login -u gitlab-ci-token --password-stdin \$CI_REGISTRY
