--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = 2.0.1
+version = $scalafmt_core_version$
 style = defaultWithAlign
 maxColumn = 130
 newlines.sometimesBeforeColonInMethodReturnType = false
@@ -6,6 +6,7 @@ newlines.afterCurlyLambda = never
 align.openParenCallSite = false
 rewrite.rules = [SortImports, AvoidInfix, RedundantParens, RedundantBraces]
 rewrite.neverInfix.excludeFilters = [
+  cross
   until
   to
   by
