--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -25,11 +25,16 @@ scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stab
 scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
 cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
 scalacheck_version=maven(org.scalacheck, scalacheck_2.12, stable)
+scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.12, stable)
+kind_projector_version=maven(org.typelevel, kind-projector_2.12.10, stable)
+better_monadic_for_version=maven(com.olegpy, better-monadic-for_2.12, stable)
 
-sbt_version=1.3.2
+sbt_version=1.3.3
 sbt_native_packager_version=1.4.1
 sbt_release_version=1.0.11
 sbt_scoverage_version=1.6.0
-sbt_scalafmt_version=2.0.2
-sbt_wartremover_version=2.4.2
+sbt_scalafmt_version=2.0.7
+sbt_wartremover_version=2.4.3
 sbt_tpolecat_version=0.1.8
+sbt_explicit_dependencies_version=0.2.11
+sbt_updates_version=0.5.0
