Remove mongo driver. Add additional doobie samples

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -15,12 +15,11 @@ circe_config_version=maven(io.circe, circe-config_2.12, stable)
 newtype_version=maven(io.estatico,newtype_2.12, stable)
 scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
 refined_version=maven(eu.timepit, refined_2.12, stable)
-mongo_scala_driver_version=maven(org.mongodb.scala, mongo-scala-driver_2.12, stable)
 sourcecode_version=maven(com.lihaoyi, sourcecode_2.12, stable)
 magnorlia_version=maven(com.propensive, magnolia_2.12, stable)
 doobie_version=maven(org.tpolecat, doobie-core_2.12, stable)
-netty_version=4.1.30.Final
 logback_version=maven(ch.qos.logback, logback-classic, stable)
+flyway_version=maven(org.flywaydb, flyway-core, stable)           
 scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stable)
 scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
 cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
