--- a/src/main/g8/src/main/resources/application.conf
+++ b/src/main/g8/src/main/resources/application.conf
@@ -24,29 +24,6 @@ application {
 
   persistence {
 
-    mongodb {
-      uri = "mongodb://localhost:27017/?streamType=netty"
-      uri = \${?MONGODB_URI}
-
-      database = "$name_normalized$"
-      database = \${?MONGODB_DATABASE}
-
-      connection-attempt-timeout = 500 milliseconds
-      connection-attempt-timeout = \${?MONGODB_CONNECTION_ATTEMPT_TIMEOUT}
-
-      retry-policy {
-        retries = 10
-        retries = \${?MONGODB_RETRY_POLICY_RETRIES}
-
-        delay = 5 seconds
-        delay = \${?MONGODB_RETRY_POLICY_DELAY}
-
-        timeout = 60 seconds
-        timeout = \${?MONGODB_RETRY_POLICY_TIMEOUT}
-      }
-
-    }
-
     postgres {
 
       driver = "org.postgresql.Driver"
@@ -63,6 +40,9 @@ application {
 
       connection-attempt-timeout = 500 milliseconds
       connection-attempt-timeout = \${?POSTGRESQL_CONNECTION_ATTEMPT_TIMEOUT}
+
+      run-migration = true
+      run-migration = \${?POSTGRESQL_RUN_MIGRATION}
 
       retry-policy {
         retries = 10
