--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -1,4 +1,5 @@
 version = $scalafmt_core_version$
+edition = 2019-10
 style = defaultWithAlign
 maxColumn = 130
 newlines.sometimesBeforeColonInMethodReturnType = false
