Add health check API

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -17,9 +17,10 @@ scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
 refined_version=maven(eu.timepit, refined_2.12, stable)
 sourcecode_version=maven(com.lihaoyi, sourcecode_2.12, stable)
 magnorlia_version=maven(com.propensive, magnolia_2.12, stable)
+sup_version=maven(com.kubukoz, sup-core_2.12)
 doobie_version=maven(org.tpolecat, doobie-core_2.12, stable)
 logback_version=maven(ch.qos.logback, logback-classic, stable)
-flyway_version=maven(org.flywaydb, flyway-core, stable)           
+flyway_version=maven(org.flywaydb, flyway-core, stable)
 scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stable)
 scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
 cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
