Add health check API

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -17,7 +17,7 @@ scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
 refined_version=maven(eu.timepit, refined_2.12, stable)
 sourcecode_version=maven(com.lihaoyi, sourcecode_2.12, stable)
 magnorlia_version=maven(com.propensive, magnolia_2.12, stable)
-sup_version=maven(com.kubukoz, sup-core_2.12)
+sup_version=maven(com.kubukoz, sup-core_2.12, stable)
 doobie_version=maven(org.tpolecat, doobie-core_2.12, stable)
 logback_version=maven(ch.qos.logback, logback-classic, stable)
 flyway_version=maven(org.flywaydb, flyway-core, stable)
