Resolve sbt version using maven

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -29,7 +29,7 @@ scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.12, stable)
 kind_projector_version=maven(org.typelevel, kind-projector_2.12.10, stable)
 better_monadic_for_version=maven(com.olegpy, better-monadic-for_2.12, stable)
 
-sbt_version=1.3.3
+sbt_version=maven(org.scala-sbt, sbt, stable)
 sbt_native_packager_version=1.4.1
 sbt_release_version=1.0.11
 sbt_scoverage_version=1.6.0
