--- a/src/main/g8/src/main/resources/deriving.conf
+++ b/src/main/g8/src/main/resources/deriving.conf
@@ -1,5 +1,5 @@
 cats.kernel.Eq = cats.kernel.Eq.fromUniversalEquals
 $organization$.util.logging.Loggable = $organization$.util.logging.LoggableDerivation.derive
-$organization$.util.error.EmptyThrowableExtractor = $organization$.util.error.EmptyThrowableExtractor.create
+$organization$.util.error.ThrowableSelect.Empty = $organization$.util.error.ThrowableSelect.Empty.create
 io.circe.Encoder = io.circe.generic.semiauto.deriveEncoder
 io.circe.Decoder = io.circe.generic.semiauto.deriveDecoder
