--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,14 @@ jdk:
 
 script:
   ## This runs the template with the default parameters, and runs test within the templated app.
-  - sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M test
+  - sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M g8
+  - cp -R .git target/g8/.git/
+  - cd target/g8
+  - echo 'addSbtPlugin("org.scoverage" % "sbt-coveralls" % "1.2.7")' >> project/coverall.sbt
+  - sbt ci
 
   ## Tricks to avoid unnecessary cache updates
   - find $HOME/.sbt -name "*.lock" | xargs rm
-  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
+
+after_success:
+  - sbt coveralls
