--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -23,6 +23,8 @@ logback_version=maven(ch.qos.logback, logback-classic, stable)
 flyway_version=maven(org.flywaydb, flyway-core, stable)
 scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stable)
 scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
+#scalatest_scalacheck_version=maven(org.scalatestplus, scalatestplus-scalacheck_2.12, stable)
+scalatest_scalacheck_version=3.1.0.0-RC2
 cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
 scalacheck_version=maven(org.scalacheck, scalacheck_2.12, stable)
 scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.12, stable)
@@ -31,9 +33,9 @@ better_monadic_for_version=maven(com.olegpy, better-monadic-for_2.12, stable)
 
 sbt_version=maven(org.scala-sbt, sbt, stable)
 sbt_native_packager_version=1.4.1
-sbt_release_version=1.0.11
-sbt_scoverage_version=1.6.0
-sbt_scalafmt_version=2.0.7
+sbt_release_version=1.0.12
+sbt_scoverage_version=1.6.1
+sbt_scalafmt_version=2.2.1
 sbt_wartremover_version=2.4.3
 sbt_tpolecat_version=0.1.8
 sbt_explicit_dependencies_version=0.2.11
