--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,33 +3,32 @@ description=A service template with a set of plugins
 organization=com.example
 name_normalized=$name;format="normalize"$
 
-scala_version=2.12.10
-http4s_version=maven(org.http4s, http4s-dsl_2.12, stable)
-cats_version=maven(org.typelevel, cats-core_2.12, stable)
-cats_effect_version=maven(org.typelevel, cats-effect_2.12, stable)
-cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.12, stable)
-monix_version=maven(io.monix, monix_2.12, stable)
-circe_version=maven(io.circe, circe-core_2.12, stable)
-circe_extras_version=maven(io.circe, circe-generic-extras_2.12, stable)
-circe_config_version=maven(io.circe, circe-config_2.12, stable)
-newtype_version=maven(io.estatico,newtype_2.12, stable)
-scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
-refined_version=maven(eu.timepit, refined_2.12, stable)
-sourcecode_version=maven(com.lihaoyi, sourcecode_2.12, stable)
-magnorlia_version=maven(com.propensive, magnolia_2.12, stable)
-sup_version=maven(com.kubukoz, sup-core_2.12, stable)
-doobie_version=maven(org.tpolecat, doobie-core_2.12, stable)
+scala_version=2.13.1
+http4s_version=maven(org.http4s, http4s-dsl_2.13)
+cats_version=maven(org.typelevel, cats-core_2.13, stable)
+cats_effect_version=maven(org.typelevel, cats-effect_2.13, stable)
+cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.13, stable)
+monix_version=maven(io.monix, monix_2.13, stable)
+circe_version=maven(io.circe, circe-core_2.13, stable)
+circe_extras_version=maven(io.circe, circe-generic-extras_2.13, stable)
+circe_config_version=maven(io.circe, circe-config_2.13, stable)
+newtype_version=maven(io.estatico,newtype_2.13, stable)
+scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.13)
+refined_version=maven(eu.timepit, refined_2.13, stable)
+sourcecode_version=maven(com.lihaoyi, sourcecode_2.13, stable)
+magnorlia_version=maven(com.propensive, magnolia_2.13, stable)
+sup_version=maven(com.kubukoz, sup-core_2.13)
+doobie_version=maven(org.tpolecat, doobie-core_2.13, stable)
 logback_version=maven(ch.qos.logback, logback-classic, stable)
 flyway_version=maven(org.flywaydb, flyway-core, stable)
-scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stable)
-scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
-#scalatest_scalacheck_version=maven(org.scalatestplus, scalatestplus-scalacheck_2.12, stable)
-scalatest_scalacheck_version=3.1.0.0-RC2
-cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
-scalacheck_version=maven(org.scalacheck, scalacheck_2.12, stable)
-scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.12, stable)
-kind_projector_version=maven(org.typelevel, kind-projector_2.12.10, stable)
-better_monadic_for_version=maven(com.olegpy, better-monadic-for_2.12, stable)
+scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.13, stable)
+scalatest_version=maven(org.scalatest, scalatest_2.13, stable)
+scalatest_scalacheck_version=maven(org.scalatestplus, scalatestplus-scalacheck_2.13)
+cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.13, stable)
+scalacheck_version=maven(org.scalacheck, scalacheck_2.13, stable)
+scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.13, stable)
+kind_projector_version=maven(org.typelevel, kind-projector_2.13.1, stable)
+better_monadic_for_version=maven(com.olegpy, better-monadic-for_2.13, stable)
 
 sbt_version=maven(org.scala-sbt, sbt, stable)
 sbt_native_packager_version=1.4.1
