Use predefined version for scalatest-scalacheck until it will be published to maven

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -23,7 +23,8 @@ logback_version=maven(ch.qos.logback, logback-classic, stable)
 flyway_version=maven(org.flywaydb, flyway-core, stable)
 scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stable)
 scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
-scalatest_scalacheck_version=maven(org.scalatestplus, scalatestplus-scalacheck_2.12, stable)
+#scalatest_scalacheck_version=maven(org.scalatestplus, scalatestplus-scalacheck_2.12, stable)
+scalatest_scalacheck_version=3.1.0.0-RC2
 cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
 scalacheck_version=maven(org.scalacheck, scalacheck_2.12, stable)
 scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.12, stable)
