Update to Giter 0.12.0

--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -2,6 +2,7 @@ version = $scalafmt_core_version$
 edition = 2019-10
 style = defaultWithAlign
 maxColumn = 130
+newlines.alwaysBeforeTopLevelStatements = true
 newlines.sometimesBeforeColonInMethodReturnType = false
 newlines.afterCurlyLambda = never
 align.openParenCallSite = false
