Use correct version of scalatest-scalacheck

--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -7,6 +7,7 @@ newlines.sometimesBeforeColonInMethodReturnType = false
 newlines.afterCurlyLambda = never
 align.openParenCallSite = false
 rewrite.rules = [SortImports, AvoidInfix, RedundantParens, RedundantBraces]
+rewrite.redundantBraces.stringInterpolation = true
 rewrite.neverInfix.excludeFilters = [
   cross
   until
