--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,10 +1,12 @@
-version = 2.1.1
+version = 2.3.1
 style = defaultWithAlign
 maxColumn = 130
+newlines.alwaysBeforeTopLevelStatements = true
 newlines.sometimesBeforeColonInMethodReturnType = false
 newlines.afterCurlyLambda = never
 align.openParenCallSite = false
 rewrite.rules = [SortImports, AvoidInfix, RedundantParens, RedundantBraces]
+rewrite.redundantBraces.stringInterpolation = true
 rewrite.neverInfix.excludeFilters = [
   cross
   until
