Disable resolve of sbt plugins via maven until sbt 1.3.5 release

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -33,9 +33,13 @@ better_monadic_for_version=maven(com.olegpy, better-monadic-for_2.12, stable)
 sbt_version=maven(org.scala-sbt, sbt, stable)
 sbt_native_packager_version=1.4.1
 sbt_release_version=1.0.12
-sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
-sbt_scalafmt_version=maven(org.scalameta, sbt-scalafmt, stable)
+#sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
+sbt_scoverage_version=1.6.1
+#sbt_scalafmt_version=maven(org.scalameta, sbt-scalafmt, stable)
+sbt_scalafmt_version=2.3.0
 sbt_wartremover_version=maven(org.wartremover, sbt-wartremover, stable)
-sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
+#sbt_wartremover_version=2.4.3
+#sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
+sbt_tpolecat_version=0.1.10
 sbt_explicit_dependencies_version=0.2.11
 sbt_updates_version=0.5.0
