Update http4s to 0.21.0-M6 Add UserApi Improve coverage

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -4,7 +4,8 @@ organization=com.example
 name_normalized=$name;format="normalize"$
 
 scala_version=2.12.10
-http4s_version=maven(org.http4s, http4s-dsl_2.12, stable)
+#http4s_version=maven(org.http4s, http4s-dsl_2.12, stable)
+http4s_version=0.21.0-M6
 cats_version=maven(org.typelevel, cats-core_2.12, stable)
 cats_effect_version=maven(org.typelevel, cats-effect_2.12, stable)
 cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.12, stable)
@@ -17,7 +18,8 @@ scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
 refined_version=maven(eu.timepit, refined_2.12, stable)
 sourcecode_version=maven(com.lihaoyi, sourcecode_2.12, stable)
 magnorlia_version=maven(com.propensive, magnolia_2.12, stable)
-sup_version=maven(com.kubukoz, sup-core_2.12, stable)
+#sup_version=maven(com.kubukoz, sup-core_2.12, stable)
+sup_version=0.7.0-M2
 doobie_version=maven(org.tpolecat, doobie-core_2.12, stable)
 logback_version=maven(ch.qos.logback, logback-classic, stable)
 flyway_version=maven(org.flywaydb, flyway-core, stable)
