Adopt cats-effect-testing

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -20,7 +20,7 @@ sourcecode_version=maven(com.lihaoyi, sourcecode_2.12, stable)
 #magnolia_version=maven(com.propensive, magnolia_2.12, stable)
 magnolia_version=0.12.1
 #sup_version=maven(com.kubukoz, sup-core_2.12, stable)
-sup_version=0.7.0-M2
+sup_version=0.7.0-M3
 doobie_version=maven(org.tpolecat, doobie-core_2.12, stable)
 logback_version=maven(ch.qos.logback, logback-classic, stable)
 flyway_version=maven(org.flywaydb, flyway-core, stable)
@@ -28,6 +28,7 @@ scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stab
 scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
 scalatest_scalacheck_version=maven(org.scalatestplus, scalacheck-1-14_2.12, stable)
 cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
+cats_effect_scalatest_version=maven(com.codecommit, cats-effect-testing-scalatest-scalacheck_2.12, stable)
 scalacheck_version=maven(org.scalacheck, scalacheck_2.12, stable)
 scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.12, stable)
 kind_projector_version=maven(org.typelevel, kind-projector_2.12.10, stable)
