--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -17,8 +17,7 @@ newtype_version=maven(io.estatico,newtype_2.12, stable)
 scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
 refined_version=maven(eu.timepit, refined_2.12, stable)
 sourcecode_version=maven(com.lihaoyi, sourcecode_2.12, stable)
-#magnolia_version=maven(com.propensive, magnolia_2.12, stable)
-magnolia_version=0.12.1
+magnolia_version=maven(com.propensive, magnolia_2.12, stable)
 #sup_version=maven(com.kubukoz, sup-core_2.12, stable)
 sup_version=0.7.0-M3
 doobie_version=maven(org.tpolecat, doobie-core_2.12, stable)
