Migrate to cats-retry

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -9,6 +9,7 @@ http4s_version=0.21.0-M6
 cats_version=maven(org.typelevel, cats-core_2.12, stable)
 cats_effect_version=maven(org.typelevel, cats-effect_2.12, stable)
 cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.12, stable)
+cats_retry_version=maven(com.github.cb372, cats-retry-mtl_2.12, stable)
 monix_version=maven(io.monix, monix_2.12, stable)
 circe_version=maven(io.circe, circe-core_2.12, stable)
 circe_extras_version=maven(io.circe, circe-generic-extras_2.12, stable)
