Replace scala-logging with io.odin.logger

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -17,14 +17,13 @@ circe_config_version=maven(io.circe, circe-config_2.12, stable)
 newtype_version=maven(io.estatico,newtype_2.12, stable)
 scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
 refined_version=maven(eu.timepit, refined_2.12, stable)
-sourcecode_version=maven(com.lihaoyi, sourcecode_2.12, stable)
 magnolia_version=maven(com.propensive, magnolia_2.12, stable)
 #sup_version=maven(com.kubukoz, sup-core_2.12, stable)
 sup_version=0.7.0-M3
 doobie_version=maven(org.tpolecat, doobie-core_2.12, stable)
 logback_version=maven(ch.qos.logback, logback-classic, stable)
 flyway_version=maven(org.flywaydb, flyway-core, stable)
-scala_logging_version=maven(com.typesafe.scala-logging, scala-logging_2.12, stable)
+odin_version=maven(com.github.valskalla, odin-extras_2.12, stable)
 scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
 scalatest_scalacheck_version=maven(org.scalatestplus, scalacheck-1-14_2.12, stable)
 cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
