Push changes to demo repository

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,10 @@ jdk:
   - openjdk11
 
 script:
-  - mkdir -p target/g8 && cd target/g8 && sh ./../../scripts/push-to-demo-repository.sh clone_repo
-  - cd ./../..
   - sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M g8
   - cd target/g8
   # - sbt ci
-  - sh ./../../scripts/push-to-demo-repository.sh push_changes
+  - bash ./../../scripts/push-to-demo-repository.sh
 
   ## Tricks to avoid unnecessary cache updates
   - find $HOME/.sbt -name "*.lock" | xargs rm
