--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
-name=Http Service
+name=Http4s Tagless Example
 description=A service template with a set of plugins
 organization=com.example
 name_normalized=$name;format="normalize"$
