--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
-name=Http Service
+name=Http4s Tagless Example
 description=A service template with a set of plugins
 organization=com.example
 name_normalized=$name;format="normalize"$
@@ -46,3 +46,4 @@ sbt_wartremover_version=2.4.3
 sbt_tpolecat_version=0.1.10
 sbt_explicit_dependencies_version=0.2.11
 sbt_updates_version=0.5.0
+sbt_mdoc_version=2.1.1
