--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,39 +3,40 @@ description=A service template with a set of plugins
 organization=com.example
 name_normalized=$name;format="normalize"$
 
-scala_version=2.12.10
-#http4s_version=maven(org.http4s, http4s-dsl_2.12, stable)
-http4s_version=0.21.0-M6
-cats_version=maven(org.typelevel, cats-core_2.12, stable)
-cats_effect_version=maven(org.typelevel, cats-effect_2.12, stable)
-cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.12, stable)
-cats_retry_version=maven(com.github.cb372, cats-retry-mtl_2.12, stable)
-monix_version=maven(io.monix, monix_2.12, stable)
-circe_version=maven(io.circe, circe-core_2.12, stable)
-circe_extras_version=maven(io.circe, circe-generic-extras_2.12, stable)
-circe_config_version=maven(io.circe, circe-config_2.12, stable)
-newtype_version=maven(io.estatico,newtype_2.12, stable)
-scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.12, stable)
-refined_version=maven(eu.timepit, refined_2.12, stable)
-magnolia_version=maven(com.propensive, magnolia_2.12, stable)
-#sup_version=maven(com.kubukoz, sup-core_2.12, stable)
+scala_version=2.13.1
+#http4s_version=maven(org.http4s, http4s-dsl_2.13, stable)
+http4s_version=0.21.0-RC2
+cats_version=maven(org.typelevel, cats-core_2.13, stable)
+cats_effect_version=maven(org.typelevel, cats-effect_2.13, stable)
+cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.13, stable)
+cats_retry_version=maven(com.github.cb372, cats-retry-mtl_2.13, stable)
+monix_version=maven(io.monix, monix_2.13, stable)
+circe_version=maven(io.circe, circe-core_2.13, stable)
+circe_extras_version=maven(io.circe, circe-generic-extras_2.13, stable)
+circe_config_version=maven(io.circe, circe-config_2.13, stable)
+newtype_version=maven(io.estatico, newtype_2.13, stable)
+#scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.13, stable)
+scalaz_deriving_version=2.0.0-M3
+refined_version=maven(eu.timepit, refined_2.13, stable)
+magnolia_version=maven(com.propensive, magnolia_2.13, stable)
+#sup_version=maven(com.kubukoz, sup-core_2.13, stable)
 sup_version=0.7.0-M3
-doobie_version=maven(org.tpolecat, doobie-core_2.12, stable)
+doobie_version=maven(org.tpolecat, doobie-core_2.13, stable)
 logback_version=maven(ch.qos.logback, logback-classic, stable)
 flyway_version=maven(org.flywaydb, flyway-core, stable)
-odin_version=maven(com.github.valskalla, odin-extras_2.12, stable)
-scalatest_version=maven(org.scalatest, scalatest_2.12, stable)
-scalatest_scalacheck_version=maven(org.scalatestplus, scalacheck-1-14_2.12, stable)
-cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.12, stable)
-cats_effect_scalatest_version=maven(com.codecommit, cats-effect-testing-scalatest-scalacheck_2.12, stable)
-scalacheck_version=maven(org.scalacheck, scalacheck_2.12, stable)
-scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.12, stable)
-kind_projector_version=maven(org.typelevel, kind-projector_2.12.10, stable)
-better_monadic_for_version=maven(com.olegpy, better-monadic-for_2.12, stable)
+odin_version=maven(com.github.valskalla, odin-extras_2.13, stable)
+scalatest_version=maven(org.scalatest, scalatest_2.13, stable)
+scalatest_scalacheck_version=maven(org.scalatestplus, scalacheck-1-14_2.13, stable)
+cats_scalatest_version=maven(com.ironcorelabs, cats-scalatest_2.13, stable)
+cats_effect_scalatest_version=maven(com.codecommit, cats-effect-testing-scalatest-scalacheck_2.13, stable)
+scalacheck_version=maven(org.scalacheck, scalacheck_2.13, stable)
+scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.13, stable)
+kind_projector_version=maven(org.typelevel, kind-projector_2.13.1, stable)
+better_monadic_for_version=maven(com.olegpy, better-monadic-for_2.13, stable)
 
 sbt_version=maven(org.scala-sbt, sbt, stable)
-sbt_native_packager_version=1.4.1
-sbt_release_version=1.0.12
+sbt_native_packager_version=1.6.0
+sbt_release_version=1.0.13
 #sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
 sbt_scoverage_version=1.6.1
 #sbt_scalafmt_version=maven(org.scalameta, sbt-scalafmt, stable)
@@ -44,6 +45,6 @@ sbt_scalafmt_version=2.3.0
 sbt_wartremover_version=2.4.3
 #sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
 sbt_tpolecat_version=0.1.10
-sbt_explicit_dependencies_version=0.2.11
+sbt_explicit_dependencies_version=0.2.12
 sbt_updates_version=0.5.0
 sbt_mdoc_version=2.1.1
