--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -4,8 +4,7 @@ organization=com.example
 name_normalized=$name;format="normalize"$
 
 scala_version=2.13.1
-#http4s_version=maven(org.http4s, http4s-dsl_2.13, stable)
-http4s_version=0.21.0-RC2
+http4s_version=maven(org.http4s, http4s-dsl_2.13, stable)
 cats_version=maven(org.typelevel, cats-core_2.13, stable)
 cats_effect_version=maven(org.typelevel, cats-effect_2.13, stable)
 cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.13, stable)
@@ -19,8 +18,7 @@ newtype_version=maven(io.estatico, newtype_2.13, stable)
 scalaz_deriving_version=2.0.0-M3
 refined_version=maven(eu.timepit, refined_2.13, stable)
 magnolia_version=maven(com.propensive, magnolia_2.13, stable)
-#sup_version=maven(com.kubukoz, sup-core_2.13, stable)
-sup_version=0.7.0-M3
+sup_version=maven(com.kubukoz, sup-core_2.13, stable)
 doobie_version=maven(org.tpolecat, doobie-core_2.13, stable)
 logback_version=maven(ch.qos.logback, logback-classic, stable)
 flyway_version=maven(org.flywaydb, flyway-core, stable)
