--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -43,6 +43,8 @@ sbt_scalafmt_version=2.3.0
 sbt_wartremover_version=2.4.3
 #sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
 sbt_tpolecat_version=0.1.10
+#sbt_missinglink_version=maven(ch.epfl.scala, sbt-missinglink, stable)
+sbt_missinglink_version=0.3.0
 sbt_explicit_dependencies_version=0.2.12
 sbt_updates_version=0.5.0
 sbt_mdoc_version=2.1.1
