Update Scala version. Update SBT to 1.3.11. Use maven resolvers for sbt plugins

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,7 +3,7 @@ description=A service template with a set of plugins
 organization=com.example
 name_normalized=$name;format="normalize"$
 
-scala_version=2.13.1
+scala_version=2.13.2
 http4s_version=maven(org.http4s, http4s-dsl_2.13, stable)
 cats_version=maven(org.typelevel, cats-core_2.13, stable)
 cats_effect_version=maven(org.typelevel, cats-effect_2.13, stable)
@@ -15,7 +15,7 @@ circe_extras_version=maven(io.circe, circe-generic-extras_2.13, stable)
 circe_config_version=maven(io.circe, circe-config_2.13, stable)
 newtype_version=maven(io.estatico, newtype_2.13, stable)
 #scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.13, stable)
-scalaz_deriving_version=2.0.0-M4
+scalaz_deriving_version=2.0.0-M5
 refined_version=maven(eu.timepit, refined_2.13, stable)
 magnolia_version=maven(com.propensive, magnolia_2.13, stable)
 sup_version=maven(com.kubukoz, sup-core_2.13, stable)
@@ -33,18 +33,13 @@ kind_projector_version=maven(org.typelevel, kind-projector_2.13.1, stable)
 better_monadic_for_version=maven(com.olegpy, better-monadic-for_2.13, stable)
 
 sbt_version=maven(org.scala-sbt, sbt, stable)
-sbt_native_packager_version=1.6.0
+sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
+sbt_scalafmt_version=maven(org.scalameta, sbt-scalafmt, stable)
+sbt_wartremover_version=maven(org.wartremover, sbt-wartremover, stable)
+sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
+sbt_missinglink_version=maven(ch.epfl.scala, sbt-missinglink, stable)
+sbt_mdoc_version=maven(org.scalameta, sbt-mdoc, stable)
+sbt_explicit_dependencies_version=0.2.13
+sbt_updates_version=0.5.1
+sbt_native_packager_version=1.7.2
 sbt_release_version=1.0.13
-#sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
-sbt_scoverage_version=1.6.1
-#sbt_scalafmt_version=maven(org.scalameta, sbt-scalafmt, stable)
-sbt_scalafmt_version=2.3.0
-#sbt_wartremover_version=maven(org.wartremover, sbt-wartremover, stable)
-sbt_wartremover_version=2.4.3
-#sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
-sbt_tpolecat_version=0.1.10
-#sbt_missinglink_version=maven(ch.epfl.scala, sbt-missinglink, stable)
-sbt_missinglink_version=0.3.0
-sbt_explicit_dependencies_version=0.2.12
-sbt_updates_version=0.5.0
-sbt_mdoc_version=2.1.1
