Replace IntegrationEnv with sbt-integration-env plugin

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -39,6 +39,7 @@ sbt_wartremover_version=maven(org.wartremover, sbt-wartremover, stable)
 sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
 sbt_missinglink_version=maven(ch.epfl.scala, sbt-missinglink, stable)
 sbt_mdoc_version=maven(org.scalameta, sbt-mdoc, stable)
+sbt_integration_env_version=maven(io.github.irevive, sbt-integration-env, stable)
 sbt_explicit_dependencies_version=0.2.13
 sbt_updates_version=0.5.1
 sbt_native_packager_version=1.7.2
