--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache:
     - $HOME/.sbt/boot/
     - $HOME/.sbt/launchers
     - $HOME/.cache
+    - $HOME/.cache/coursier/v1
 
 jdk:
   - openjdk11
@@ -15,7 +16,7 @@ jdk:
 script:
   - sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M g8
   - cd target/g8
-  - sbt ci && bash ./../../scripts/push-to-demo-repository.sh
+  - sbt 'set insideCI := false' ci && bash ./../../scripts/push-to-demo-repository.sh
 
   ## Tricks to avoid unnecessary cache updates
   - find $HOME/.sbt -name "*.lock" | xargs rm
