Update scala version, update cats-effect

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -6,7 +6,8 @@ name_normalized=$name;format="normalize"$
 scala_version=2.13.1
 http4s_version=maven(org.http4s, http4s-dsl_2.13, stable)
 cats_version=maven(org.typelevel, cats-core_2.13, stable)
-cats_effect_version=maven(org.typelevel, cats-effect_2.13, stable)
+#cats_effect_version=maven(org.typelevel, cats-effect_2.13, stable)
+cats_effect_version=2.1.4
 cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.13, stable)
 cats_retry_version=maven(com.github.cb372, cats-retry-mtl_2.13, stable)
 monix_version=maven(io.monix, monix_2.13, stable)
